tests/sum8.txt
// Tutorial step 8 (match end-of-input)
sum = number ('+' @ number @2add)? end
number = ('0..9')+ @number
end = 13? 10 @
==========
2
----------
number 2
==========
42
----------
number 42
==========
2+40
----------
number 2
number 40
add
==========
2+40%
----------
Error on line 1:
2+40%
    ^
